# MarkUpsideDown-my-extend

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql.yml  pages.yml  release.yml
docs/: ai-integration.md  architecture.md  cli.md  keyboard-shortcuts.md  mcp-server.md  worker-deployment.md
docs/manual/: ai-integration.md  crawling-websites.md  editing-features.md  editor-basics.md  file-management.md  git-integration.md  importing-content.md  installation.md  introduction.md  keyboard-shortcuts.md  presentation.md  preview.md  publishing.md  search.md  tags.md
mcp-server-rs/: Cargo.toml
mcp-server-rs/src/: bridge.rs  main.rs  tools.rs
mcp-server/src/: bridge.ts
scripts/: test-mcp-bridge.sh
src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  claude.rs  cloudflare.rs  commands.rs  main.rs  menu.rs  slack.rs  util.rs
src-tauri/src/commands/: crawl.rs  files.rs  git.rs  web.rs
src/editor/: mod.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
ui/src/: auto-link-title.ts  batch-import.ts  cjk-emphasis.ts  claude-panel.ts  clone-panel.ts  command-palette.ts  crawl.ts  document-structure.ts  download-images.ts  fetch-markdown.ts  file-ops.ts  file-watcher.ts  frontmatter-panel.ts  git-panel.ts  github-panel.js  github-panel.ts  global.d.ts  html-utils.ts  image-paste.ts  link-context-menu.ts  main.js  main.ts  markdown-commands.ts  markdown-lint.ts  mcp-sync.ts  mermaid-viewer.ts  normalize.ts  note-refactor.ts  path-utils.ts  presentation.ts  preview-render.ts  publish.ts  scroll-sync.ts  semantic-search.ts  settings.js  settings.ts  sidebar.js  sidebar.ts  smart-typography.ts  storage-keys.ts  (+8 more)
worker/: package-lock.json  package.json  wrangler.jsonc
worker/.wrangler/cache/: wrangler-account.json
worker/src/: config.ts  index.ts  ssrf.ts  types.ts  utils.ts
worker/src/handlers/: batch.ts  convert.ts  crawl.ts  embed.ts  fetch.ts  health.ts  json.ts  publish.ts  render.ts
