[package]
name = "markupsidedown"
version = "0.1.10"
edition = "2024"
description = "AI-era Markdown editor with live preview, Cloudflare Markdown for Agents, GitHub, and Claude Code integration"
license = "AGPL-3.0-or-later"
repository = "https://github.com/masanarihigashi/markupsidedown"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
axum = "0.8"
dirs = "6"
log = "0.4"
