[package]
name = "markupsidedown"
version = "0.2.8"
edition = "2024"
description = "AI-era Markdown editor with live preview, Cloudflare Markdown for Agents, GitHub, and Claude Code integration"
license = "AGPL-3.0-or-later"
repository = "https://github.com/masanarihigashi/markupsidedown"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-cli = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1", features = ["net", "rt", "fs", "macros"] }
urlencoding = "2"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "query", "tokio"] }
thiserror = "2"
log = "0.4"
trash = "5"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
comrak = { version = "0.52", default-features = false }
